docs: 유저 정보 조회 문서 추가(#13)

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -24,3 +24,14 @@ include::{snippets}/userSignIn/http-request.adoc[]
 === Response
 
 include::{snippets}/userSignIn/http-response.adoc[]
+
+== User 정보 조회
+
+=== Request
+
+include::{snippets}/getUserInfo/http-request.adoc[]
+
+=== Response
+
+include::{snippets}/getUserInfo/http-response.adoc[]
+
