docs: 닉네임 변경 문서 추가 (#15)

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -35,3 +35,13 @@ include::{snippets}/getUserInfo/http-request.adoc[]
 
 include::{snippets}/getUserInfo/http-response.adoc[]
 
+== User 닉네임 변경
+
+=== Request
+
+include::{snippets}/updateUserNickname/http-request.adoc[]
+
+=== Response
+
+include::{snippets}/updateUserNickname/http-response.adoc[]
+
